--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "http-status-codes": "^2.2.0",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.15"
   }
 }
